--- a/composer.json
+++ b/composer.json
@@ -32,8 +32,7 @@
         "yiisoft/aliases": "^3.0@dev",
         "yiisoft/di": "^3.0@dev",
         "yiisoft/event-dispatcher": "^3.0@dev",
-        "yiisoft/log": "^3.0@dev",
-        "yiisoft/view": "^3.0@dev"
+        "yiisoft/log": "^3.0@dev"
     },
     "autoload": {
         "psr-4": {
