--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,10 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0.x-dev"
+            "dev-master": "3.0.x-dev"
+        },
+        "config": {
+            "sort-packages": true
         },
         "config-plugin": {
             "common": "config/common.php",
