Add sort-packages composer.json (#13)

--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,9 @@
         "branch-alias": {
             "dev-master": "1.0.x-dev"
         },
+        "config": {
+            "sort-packages": true
+        },
         "config-plugin": {
             "common": "config/common.php",
             "tests": "config/test.php"
