--- a/composer.json
+++ b/composer.json
@@ -29,8 +29,7 @@
         "phpunit/phpunit": "^9.0",
         "phan/phan": "^3.0",
         "yiisoft/aliases": "^3.0@dev",
-        "yiisoft/di": "^3.0@dev",
-        "yiisoft/log": "^3.0@dev"
+        "yiisoft/di": "^3.0@dev"
     },
     "autoload": {
         "psr-4": {
