--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "yiisoft/composer-config-plugin": "^1.0@dev",
         "phpunit/phpunit": "^9.0",
         "phan/phan": "^3.0",
-        "yiisoft/aliases": "^3.0@dev",
+        "yiisoft/aliases": "^1.0",
         "yiisoft/di": "^3.0@dev"
     },
     "autoload": {
