--- a/composer.json
+++ b/composer.json
@@ -23,14 +23,14 @@
         "ext-mbstring": "*",
         "psr/log": "^1.1",
         "yiisoft/aliases": "^1.0",
-        "yiisoft/di": "^3.0@dev",
         "yiisoft/files": "^3.0@dev"
     },
     "require-dev": {
         "infection/infection": "^0.16.3",
         "phan/phan": "^3.0.2",
         "phpunit/phpunit": "^9.2",
-        "yiisoft/composer-config-plugin": "^1.0@dev"
+        "yiisoft/composer-config-plugin": "^1.0@dev",
+        "yiisoft/di": "^3.0@dev"
     },
     "autoload": {
         "psr-4": {
