--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "phan/phan": "^3.0.2",
         "phpunit/phpunit": "^9.2",
         "yiisoft/composer-config-plugin": "^1.0@dev",
-        "yiisoft/di": "^3.0@dev"
+        "yiisoft/di": "^3.0@dev",
+        "foxy/foxy": "^1.0.8"
     },
     "autoload": {
         "psr-4": {
