--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "author": "yiisoft",
   "license": "BSD-3-Clause",
   "bugs": {
-    "url": "https://github.com/terabytesoftw/assets/issues"
+    "url": "https://github.com/yiisoft/assets/issues"
   },
-  "homepage": "https://github.com/terabytesoftw/assets#readme",
+  "homepage": "https://github.com/yiisoft/assets#readme",
   "devDependencies": {
     "sass": "^1.26.9"
   }
