--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": "^7.4",
+        "php": "^7.4|^8.0",
         "ext-mbstring": "*",
         "psr/log": "^1.1",
         "yiisoft/aliases": "^1.0",
@@ -28,7 +28,7 @@
     "require-dev": {
         "infection/infection": "^0.16.3",
         "phan/phan": "^3.0.2",
-        "phpunit/phpunit": "^9.2",
+        "phpunit/phpunit": "^9.3",
         "yiisoft/composer-config-plugin": "^1.0@dev",
         "yiisoft/di": "^3.0@dev",
         "foxy/foxy": "^1.0.8"
