--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -9,7 +9,6 @@ jobs:
     name: PHP ${{ matrix.php-version }}-${{ matrix.os }}
 
     env:
-      extensions: ast
       update: true
 
     runs-on: ${{ matrix.os }}
@@ -30,7 +29,6 @@ jobs:
         uses: "shivammathur/setup-php@v2"
         with:
           php-version: "${{ matrix.php-version }}"
-          extensions: ${{ env.extensions }}
           tools: composer:v2, cs2pr
           coverage: none
 
@@ -49,4 +47,4 @@ jobs:
         run: composer update --prefer-dist --no-interaction --no-progress --optimize-autoloader
 
       - name: Static analysis with phan
-        run: vendor/bin/phan --no-progress-bar --output-mode checkstyle | cs2pr --graceful-warnings --colorize
+        run: vendor/bin/psalm --shepherd --stats --output-format=checkstyle | cs2pr --graceful-warnings --colorize
