--- a/composer.json
+++ b/composer.json
@@ -26,12 +26,11 @@
         "yiisoft/files": "^3.0@dev"
     },
     "require-dev": {
-        "infection/infection": "^0.18.0",
-        "phan/phan": "^3.0.2",
-        "phpunit/phpunit": "^9.3",
-        "yiisoft/composer-config-plugin": "^1.0@dev",
-        "yiisoft/di": "^3.0@dev",
-        "foxy/foxy": "^1.0.8"
+        "infection/infection": "^0.18",
+        "phpunit/phpunit": "^9.4",
+        "vimeo/psalm": "^4.0",
+        "foxy/foxy": "^1.0.8",
+        "yiisoft/di": "^3.0@dev"
     },
     "autoload": {
         "psr-4": {
