--- a/composer.json
+++ b/composer.json
@@ -26,11 +26,11 @@
         "yiisoft/files": "^3.0@dev"
     },
     "require-dev": {
-        "foxy/foxy": "^1.0.8",
+        "foxy/foxy": "^1.1",
         "phpunit/phpunit": "^9.4",
-        "roave/infection-static-analysis-plugin": "^1.3",
-        "vimeo/psalm": "^4.1",
-        "yiisoft/di": "^3.0@dev"
+        "roave/infection-static-analysis-plugin": "^1.5",
+        "vimeo/psalm": "^4.2",
+        "yiisoft/di": "3.0.x-dev"
     },
     "autoload": {
         "psr-4": {
