--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "foxy/foxy": "^1.1",
         "phpunit/phpunit": "^9.4",
         "roave/infection-static-analysis-plugin": "^1.5",
+        "spatie/phpunit-watcher": "^1.23",
         "vimeo/psalm": "^4.2",
         "yiisoft/di": "3.0.x-dev"
     },
