--- a/composer.json
+++ b/composer.json
@@ -27,11 +27,11 @@
     },
     "require-dev": {
         "foxy/foxy": "^1.1",
-        "phpunit/phpunit": "^9.4",
-        "roave/infection-static-analysis-plugin": "^1.5",
+        "phpunit/phpunit": "^9.5",
+        "roave/infection-static-analysis-plugin": "^1.7",
         "spatie/phpunit-watcher": "^1.23",
         "vimeo/psalm": "^4.3",
-        "yiisoft/di": "3.0.x-dev"
+        "yiisoft/di": "^3.0@dev"
     },
     "autoload": {
         "psr-4": {
