--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "ext-mbstring": "*",
         "psr/log": "^1.1",
         "yiisoft/aliases": "^1.1.0",
-        "yiisoft/files": "^3.0@dev"
+        "yiisoft/files": "^1.0"
     },
     "require-dev": {
         "foxy/foxy": "^1.1",
