--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,8 @@
         "phpunit/phpunit": "^9.5",
         "roave/infection-static-analysis-plugin": "^1.7",
         "spatie/phpunit-watcher": "^1.23",
-        "vimeo/psalm": "^4.4",
-        "yiisoft/di": "^3.0@dev"
+        "vimeo/psalm": "^4.6",
+        "yiisoft/test-support": "^1.3"
     },
     "autoload": {
         "psr-4": {
