--- a/composer.json
+++ b/composer.json
@@ -50,9 +50,12 @@
         "config": {
             "sort-packages": true
         },
+        "config-plugin-options": {
+            "source-directory": "config"
+        },
         "config-plugin": {
-            "params": "config/params.php",
-            "web": "config/web.php"
+            "params": "params.php",
+            "web": "web.php"
         }
     },
     "config": {
