--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "assets",
     "version": "1.0.0",
-    "description": "The package impements clientside asset (such as CSS and JavaScript) management for PHP.",
+    "description": "The package implements clientside asset (such as CSS and JavaScript) management for PHP.",
     "author": "yiisoft",
     "license": "BSD-3-Clause",
     "bugs": {
