--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "php": "^7.4|^8.0",
         "ext-mbstring": "*",
         "psr/log": "^1.1",
-        "yiisoft/aliases": "^1.1.0",
+        "yiisoft/aliases": "^1.1|^2.0",
         "yiisoft/files": "^1.0",
         "yiisoft/json": "^1.0"
     },
