--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "yiisoft/json": "^1.0"
     },
     "require-dev": {
+        "maglnet/composer-require-checker": "^4.2",
         "phpunit/phpunit": "^9.5",
         "roave/infection-static-analysis-plugin": "^1.16",
         "spatie/phpunit-watcher": "^1.23",
