--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "source": "https://github.com/yiisoft/assets"
     },
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "^8.0",
         "ext-mbstring": "*",
         "psr/log": "^1.1|^2.0|^3.0",
         "yiisoft/aliases": "^1.1|^2.0",
