--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "source": "https://github.com/yiisoft/assets"
     },
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "^8.0",
         "ext-mbstring": "*",
         "psr/log": "^1.1|^2.0|^3.0",
         "yiisoft/aliases": "^1.1|^2.0",
@@ -28,10 +28,11 @@
     "require-dev": {
         "maglnet/composer-require-checker": "^4.2",
         "phpunit/phpunit": "^9.5",
+        "rector/rector": "^0.14.3",
         "roave/infection-static-analysis-plugin": "^1.16",
         "spatie/phpunit-watcher": "^1.23",
         "vimeo/psalm": "^4.18",
-        "yiisoft/test-support": "^1.3"
+        "yiisoft/test-support": "^3.0"
     },
     "autoload": {
         "psr-4": {
