--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "roave/infection-static-analysis-plugin": "^1.16",
         "spatie/phpunit-watcher": "^1.23",
         "vimeo/psalm": "^4.30|^5.6",
+        "yiisoft/di": "^1.2",
         "yiisoft/test-support": "^3.0"
     },
     "autoload": {
@@ -50,7 +51,7 @@
         },
         "config-plugin": {
             "params": "params.php",
-            "web": "web.php"
+            "di-web": "di-web.php"
         }
     },
     "config": {
