--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "php": "^8.0",
         "ext-mbstring": "*",
         "psr/log": "^1.1|^2.0|^3.0",
-        "yiisoft/aliases": "^1.1|^2.0",
+        "yiisoft/aliases": "^1.1|^2.0|^3.0",
         "yiisoft/files": "^2.0",
         "yiisoft/json": "^1.0"
     },
