--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
         "vimeo/psalm": "^4.30|^5.6",
         "yiisoft/di": "^1.2",
         "yiisoft/test-support": "^3.0",
-        "yiisoft/yii-debug": "dev-split-debug"
+        "yiisoft/yii-debug": "master"
     },
     "autoload": {
         "psr-4": {
