--- a/composer.json
+++ b/composer.json
@@ -20,18 +20,18 @@
     "require": {
         "php": "^8.0",
         "ext-mbstring": "*",
-        "psr/log": "^1.1|^2.0|^3.0",
-        "yiisoft/aliases": "^1.1|^2.0|^3.0",
+        "psr/log": "^3.0",
+        "yiisoft/aliases": "^3.0",
         "yiisoft/files": "^2.0",
         "yiisoft/json": "^1.0"
     },
     "require-dev": {
-        "maglnet/composer-require-checker": "^4.2",
+        "maglnet/composer-require-checker": "^4.3",
         "phpunit/phpunit": "^9.5",
-        "rector/rector": "^0.15.3",
-        "roave/infection-static-analysis-plugin": "^1.16",
+        "rector/rector": "^0.16",
+        "roave/infection-static-analysis-plugin": "^1.26|^1.31",
         "spatie/phpunit-watcher": "^1.23",
-        "vimeo/psalm": "^4.30|^5.6",
+        "vimeo/psalm": "^4.30|^5.8",
         "yiisoft/di": "^1.2",
         "yiisoft/test-support": "^3.0",
         "yiisoft/yii-debug": "dev-master"
