Revert drop versions from composer.json.

--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
     "require": {
         "php": "^8.0",
         "ext-mbstring": "*",
-        "psr/log": "^3.0",
-        "yiisoft/aliases": "^3.0",
+        "psr/log": "^1.1|^2.0|^3.0",
+        "yiisoft/aliases": "^1.1|^2.0|^3.0",
         "yiisoft/files": "^2.0",
         "yiisoft/json": "^1.0"
     },
