--- a/composer.json
+++ b/composer.json
@@ -26,12 +26,12 @@
         "yiisoft/json": "^1.0"
     },
     "require-dev": {
-        "maglnet/composer-require-checker": "^4.2",
+        "maglnet/composer-require-checker": "^4.3",
         "phpunit/phpunit": "^9.5",
-        "rector/rector": "^0.15.3",
-        "roave/infection-static-analysis-plugin": "^1.16",
+        "rector/rector": "^0.16",
+        "roave/infection-static-analysis-plugin": "^1.25|^1.31",
         "spatie/phpunit-watcher": "^1.23",
-        "vimeo/psalm": "^4.30|^5.6",
+        "vimeo/psalm": "^4.30|^5.8",
         "yiisoft/di": "^1.2",
         "yiisoft/test-support": "^3.0",
         "yiisoft/yii-debug": "dev-master"
