--- a/composer.json
+++ b/composer.json
@@ -31,10 +31,10 @@
         "rector/rector": "^0.19",
         "roave/infection-static-analysis-plugin": "^1.25|^1.31",
         "spatie/phpunit-watcher": "^1.23",
-        "vimeo/psalm": "^4.30|^5.8",
+        "vimeo/psalm": "^4.30|^5.20",
         "yiisoft/di": "^1.2",
         "yiisoft/test-support": "^3.0",
-        "yiisoft/yii-debug": "dev-master"
+        "yiisoft/yii-debug": "dev-master|dev-php80"
     },
     "autoload": {
         "psr-4": {
