--- a/composer.json
+++ b/composer.json
@@ -36,15 +36,15 @@
         "yiisoft/json": "^1.0"
     },
     "require-dev": {
-        "maglnet/composer-require-checker": "^4.3",
+        "maglnet/composer-require-checker": "^4.7",
         "phpunit/phpunit": "^9.5",
-        "rector/rector": "^1.0",
-        "roave/infection-static-analysis-plugin": "^1.25|^1.31",
-        "spatie/phpunit-watcher": "^1.23",
-        "vimeo/psalm": "^4.30|^5.20",
-        "yiisoft/di": "^1.2",
+        "rector/rector": "^1.2",
+        "roave/infection-static-analysis-plugin": "^1.35",
+        "spatie/phpunit-watcher": "^1.24",
+        "vimeo/psalm": "^5.26",
+        "yiisoft/di": "^1.3",
         "yiisoft/test-support": "^3.0",
-        "yiisoft/yii-debug": "dev-master|dev-php80"
+        "yiisoft/yii-debug": "dev-master"
     },
     "autoload": {
         "psr-4": {
