--- a/composer.json
+++ b/composer.json
@@ -36,10 +36,10 @@
         "yiisoft/json": "^1.0"
     },
     "require-dev": {
+        "infection/infection": "^0.27.11",
         "maglnet/composer-require-checker": "^4.7",
         "phpunit/phpunit": "^10.5",
         "rector/rector": "^2.0",
-        "roave/infection-static-analysis-plugin": "^1.35",
         "spatie/phpunit-watcher": "^1.24",
         "vimeo/psalm": "^5.26",
         "yiisoft/di": "^1.3",
@@ -75,6 +75,7 @@
     },
     "scripts": {
         "test": "phpunit --testdox --no-interaction",
-        "test-watch": "phpunit-watcher watch"
+        "test-watch": "phpunit-watcher watch",
+        "infection": "vendor/bin/infection --only-covered"
     }
 }
