--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
       - '.gitignore'
       - '.gitattributes'
       - 'infection.json.dist'
-      - 'psalm.xml'
+      - 'phpstan.neon'
 
   push:
     branches: ['master']
@@ -18,7 +18,7 @@ on:
       - '.gitignore'
       - '.gitattributes'
       - 'infection.json.dist'
-      - 'psalm.xml'
+      - 'phpstan.neon'
 
 name: build
 
