--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -23,7 +23,7 @@ on:
 name: static analysis
 
 jobs:
-  psalm:
+  phpstan:
     uses: yiisoft/actions/.github/workflows/phpstan.yml@phpstan
     with:
       os: >-
