--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -24,7 +24,7 @@ name: static analysis
 
 jobs:
   phpstan:
-    uses: yiisoft/actions/.github/workflows/phpstan.yml@phpstan
+    uses: yiisoft/actions/.github/workflows/phpstan.yml@master
     with:
       os: >-
         ['ubuntu-latest']
