--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -23,8 +23,8 @@ on:
 name: static analysis
 
 jobs:
-  psalm:
-    uses: yiisoft/actions/.github/workflows/psalm.yml@master
+  phpstan:
+    uses: yiisoft/actions/.github/workflows/phpstan.yml@master
     with:
       os: >-
         ['ubuntu-latest']
