--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         }
     ],
     "require": {
-        "php": "^8.1",
+        "php": "~8.1.0 || ~8.2.0 || ~8.3.0 || ~8.4.0",
         "ext-mbstring": "*",
         "psr/log": "^1.1|^2.0|^3.0",
         "yiisoft/aliases": "^1.1|^2.0|^3.0",
