--- a/composer.json
+++ b/composer.json
@@ -36,15 +36,15 @@
         "yiisoft/json": "^1.0"
     },
     "require-dev": {
-        "infection/infection": "^0.27.11",
-        "maglnet/composer-require-checker": "^4.7",
-        "phpstan/phpstan": "^2.1",
-        "phpunit/phpunit": "^10.5",
-        "rector/rector": "^2.0",
+        "bamarni/composer-bin-plugin": "^1.8.2",
+        "infection/infection": "^0.29.8",
+        "phpstan/phpstan": "^2.1.2",
+        "phpunit/phpunit": "^10.5.44",
+        "rector/rector": "^2.0.7",
         "spatie/phpunit-watcher": "^1.24",
-        "vimeo/psalm": "^5.26.1|^6.2",
+        "vimeo/psalm": "^6.2",
         "yiisoft/di": "^1.3",
-        "yiisoft/test-support": "^3.0",
+        "yiisoft/test-support": "^3.0.1",
         "yiisoft/yii-debug": "dev-master"
     },
     "autoload": {
@@ -58,6 +58,11 @@
         }
     },
     "extra": {
+        "bamarni-bin": {
+            "bin-links": true,
+            "target-directory": "tools",
+            "forward-command": true
+        },
         "config-plugin-options": {
             "source-directory": "config"
         },
@@ -68,7 +73,9 @@
     },
     "config": {
         "sort-packages": true,
+        "bump-after-update": "dev",
         "allow-plugins": {
+            "bamarni/composer-bin-plugin": true,
             "infection/extension-installer": true,
             "composer/package-versions-deprecated": true,
             "yiisoft/config": false
