--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
         "phpunit/phpunit": "^10.5.44",
         "rector/rector": "^2.0.7",
         "spatie/phpunit-watcher": "^1.24",
-        "vimeo/psalm": "^6.2",
+        "vimeo/psalm": "^5.26.1|^6.2",
         "yiisoft/di": "^1.3",
         "yiisoft/test-support": "^3.0.1",
         "yiisoft/yii-debug": "dev-master"
