--- a/composer.json
+++ b/composer.json
@@ -30,21 +30,21 @@
     "require": {
         "php": "~8.1.0 || ~8.2.0 || ~8.3.0 || ~8.4.0",
         "ext-mbstring": "*",
-        "psr/log": "^1.1|^2.0|^3.0",
-        "yiisoft/aliases": "^1.1|^2.0|^3.0",
+        "psr/log": "^1.1 || ^2.0 || ^3.0",
+        "yiisoft/aliases": "^1.1 || ^2.0 || ^3.0",
         "yiisoft/files": "^2.0",
         "yiisoft/json": "^1.0"
     },
     "require-dev": {
         "bamarni/composer-bin-plugin": "^1.8.2",
         "infection/infection": "^0.29.8",
-        "phpstan/phpstan": "^2.1.2",
-        "phpunit/phpunit": "^10.5.44",
-        "rector/rector": "^2.0.7",
+        "phpstan/phpstan": "^2.1",
+        "phpunit/phpunit": "^10.5.45",
+        "rector/rector": "^2.0.10",
         "spatie/phpunit-watcher": "^1.24",
-        "vimeo/psalm": "^6.2",
+        "vimeo/psalm": "^6.8.8",
         "yiisoft/di": "^1.3",
-        "yiisoft/test-support": "^3.0.1",
+        "yiisoft/test-support": "^3.0.2",
         "yiisoft/yii-debug": "dev-master"
     },
     "autoload": {
