--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         }
     ],
     "require": {
-        "php": "~8.1.0 || ~8.2.0 || ~8.3.0 || ~8.4.0",
+        "php": "8.1 - 8.4",
         "ext-mbstring": "*",
         "psr/log": "^1.1 || ^2.0 || ^3.0",
         "yiisoft/aliases": "^1.1 || ^2.0 || ^3.0",
@@ -38,12 +38,12 @@
     "require-dev": {
         "bamarni/composer-bin-plugin": "^1.8.2",
         "infection/infection": "^0.29.8",
-        "phpstan/phpstan": "^2.1",
-        "phpunit/phpunit": "^10.5.45",
-        "rector/rector": "^2.0.10",
+        "phpstan/phpstan": "^2.1.22",
+        "phpunit/phpunit": "^10.5.52",
+        "rector/rector": "^2.1.4",
         "spatie/phpunit-watcher": "^1.24",
-        "vimeo/psalm": "^6.8.8",
-        "yiisoft/di": "^1.3",
+        "vimeo/psalm": "^6.13.1",
+        "yiisoft/di": "^1.4",
         "yiisoft/test-support": "^3.0.2",
         "yiisoft/yii-debug": "dev-master"
     },
@@ -73,7 +73,6 @@
     },
     "config": {
         "sort-packages": true,
-        "bump-after-update": "dev",
         "allow-plugins": {
             "bamarni/composer-bin-plugin": true,
             "infection/extension-installer": true,
